# serializer version: 1
# name: test_entities[sensor.nespresso_vertuo_mini_machine_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'ready',
        'brewing',
        'heating',
        'cooldown',
        'descaling',
        'descaling_ready',
        'cleaning',
        'rinsing',
        'emptying',
        'power_save',
        'updating',
        'capsule_reading',
        'tank_empty',
        'service_mode',
        'maintenance_menu',
        'overheated',
        'paused',
        'setup',
        'factory_reset',
        'initializing',
        'error',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.nespresso_vertuo_mini_machine_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Machine status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Machine status',
    'platform': 'nespresso_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'machine_status',
    'unique_id': '80:F1:B2:E1:48:76_machine_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor.nespresso_vertuo_mini_machine_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Nespresso Vertuo Mini Machine status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'standby',
        'ready',
        'brewing',
        'heating',
        'cooldown',
        'descaling',
        'descaling_ready',
        'cleaning',
        'rinsing',
        'emptying',
        'power_save',
        'updating',
        'capsule_reading',
        'tank_empty',
        'service_mode',
        'maintenance_menu',
        'overheated',
        'paused',
        'setup',
        'factory_reset',
        'initializing',
        'error',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nespresso_vertuo_mini_machine_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ready',
  })
# ---
# name: test_entities[sensor.nespresso_vertuo_mini_water_hardness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.nespresso_vertuo_mini_water_hardness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Water hardness',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Water hardness',
    'platform': 'nespresso_ble',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'water_hardness',
    'unique_id': '80:F1:B2:E1:48:76_water_hardness',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[sensor.nespresso_vertuo_mini_water_hardness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Nespresso Vertuo Mini Water hardness',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.nespresso_vertuo_mini_water_hardness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4',
  })
# ---
